--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+deploy:
+  provider: elasticbeanstalk
+  access_key_id:
+    secure: "Encrypted <access-key-id>="
+  secret_access_key:
+    secure: "Encypted <secret-access-key>="
+  region: "us-east-1"
+  app: "aws-deploy-test-2"
+  env: "aws-deploy-test-2-env"
+  bucket_name: "the-target-S3-bucket"
+
 dist: focal
 language: python
 script: echo "Travis is cool!"
