--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 deploy:
   provider: elasticbeanstalk
   access_key_id:
-    secure: "Encrypted <access-key-id>="
+    secure: "AKIAQZFG5H2PDJAHKNPS"
   secret_access_key:
-    secure: "Encypted <secret-access-key>="
+    secure: "django-insecure-)5j4llcdl+=jnjy_k-qh@8qyr=v(t&)+tr#zbcuspl0%ddq2zx"
   region: "us-east-1"
   app: "aws-deploy-test-2"
   env: "aws-deploy-test-2-env"
