--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,17 @@ deploy:
 
 dist: focal
 language: python
-script: echo "Travis is cool!"
-install: skip
+install:
+  - pip install -r requirements.txt
+
+before_script:
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
+
+script:
+  - black --check .
+  - flake8 .
+  - coverage run --source=mysite_swe1_app,polls manage.py test
+
+after_script:
+  - coveralls
