--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ deploy:
   app: "aws-deploy-test-2"
   env: "aws-deploy-test-2-env"
   bucket_name: "elasticbeanstalk-us-east-1-054037135006"
+
+
+dist: focal
+language: python
+install:
+none
