--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,19 @@ deploy:
 
 dist: focal
 language: python
+python:
+  - 3.12
 install:
-none
+  - pip install -r requirements.txt
+
+before_script:
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
+
+script:
+  - black --check .
+  - flake8 .
+  - coverage run --source=mysite_swe1_app,polls manage.py test
+
+after_script:
+  - coveralls
