--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,8 @@ after_script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: "AKIAQZFG5H2PDJAHKNPS"
-  secret_access_key:
-    secure: "django-insecure-)5j4llcdl+=jnjy_k-qh@8qyr=v(t&)+tr#zbcuspl0%ddq2zx"
+  access_key_id: "AKIAQZFG5H2PDJAHKNPS"
+  secret_access_key: "django-insecure-)5j4llcdl+=jnjy_k-qh@8qyr=v(t&)+tr#zbcuspl0%ddq2zx"
   region: "us-east-1"
   app: "aws-deploy-test-2"
   env: "aws-deploy-test-2-env"
