--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 
 script:
   - black --check .
+  - flake8 .
   - coverage run --source=aws-deploy-test-2,polls manage.py test
 
 after_script:
